eks/metabase/metabase-deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-deployment
  namespace: metabase
spec:
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - name: metabase
        image: metabase/metabase
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 2048Mi
            cpu: 2000m
          requests:
            memory: 1024Mi
            cpu: 200m
