eks/metabase/metabase-svc.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
  namespace: metabase
spec:
  selector:
    app: metabase
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
